@@ -1,14 +1,20 @@
-import java.util.Arrays;
+import java.io.IOException;
+import java.util.List;
 
 public class Main {
 
-  public static void main(String[] args) {
-    String expected = "Rental Record for C. U. Stomer\n\tYou've Got Mail\t3.5\n\tMatrix\t2.0\nAmount owed is 5.5\nYou earned 2 frequent points\n";
+  public static void main(String[] args) throws IOException {
+    final String expected = "Rental Record for C. U. Stomer\n\tYou've Got Mail\t3.5\n\tMatrix\t2.0\nAmount owed is 5.5\nYou earned 2 frequent points\n";
 
-    String result = new RentalInfo().statement(new Customer("C. U. Stomer", Arrays.asList(new MovieRental("F001", 3), new MovieRental("F002", 1))));
+    var customer = new Customer("C. U. Stomer", 
+      List.of(
+        new MovieRental(new RegularMovie("F001", "You've Got Mail"), 3),
+        new MovieRental(new RegularMovie("F002", "Matrix"), 1)));
 
-    if (!result.equals(expected)) {
-      throw new AssertionError("Expected: " + System.lineSeparator() + String.format(expected) + System.lineSeparator() + System.lineSeparator() + "Got: " + System.lineSeparator() + result);
+    var actual = customer.printStatement();
+
+    if (!actual.equals(expected)) {
+      throw new AssertionError("Expected: " + System.lineSeparator() + String.format(expected) + System.lineSeparator() + System.lineSeparator() + "Got: " + System.lineSeparator() + actual);
     }
 
     System.out.println("Success");
